后台商品页面查询

--- a/manager/manager-web/pom.xml
+++ b/manager/manager-web/pom.xml
@@ -39,16 +39,26 @@
     <build>
         <finalName>manager-web</finalName>
         <plugins>
-            <plugin>
+           <!-- <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <configuration>
-                        <!--远程Tomcat的ip地址和端口号，注意远程Tomcat需要启动-->
+                        &lt;!&ndash;远程Tomcat的ip地址和端口号，注意远程Tomcat需要启动&ndash;&gt;
                         <url>http://106.15.180.82:8080/manager/text</url>
                         <username>root</username>
                         <password>root123</password>
                         <update>true</update>
                         <path>/shop</path>
+                </configuration>
+            </plugin>-->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <port>81</port>
+                    <path>/shop</path>
+                    <uriEncoding>UTF-8</uriEncoding>
                 </configuration>
             </plugin>
         </plugins>
