--- a/portal/pportal-web/pom.xml
+++ b/portal/pportal-web/pom.xml
@@ -32,8 +32,14 @@
         <groupId>javax.servlet</groupId>
         <artifactId>jstl</artifactId>
     </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.pagehelper/pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.2</version>
+        </dependency>
 
-</dependencies>
+    </dependencies>
 <build>
 <finalName>manager-web</finalName>
 <!--<plugins>
