--- a/manager/manager-web/pom.xml
+++ b/manager/manager-web/pom.xml
@@ -34,7 +34,11 @@
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.2</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>manager-web</finalName>
