--- a/manager/manager-web/src/main/resources/db.properties
+++ b/manager/manager-web/src/main/resources/db.properties
@@ -2,3 +2,7 @@ jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://106.15.180.82:3306/good?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=MyNewPass4!
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/good?useUnicode=true&characterEncoding=utf8
+#jdbc.username=root
+#jdbc.password=123
