--- a/portal/pportal-web/src/main/resources/db.properties
+++ b/portal/pportal-web/src/main/resources/db.properties
@@ -1,8 +1,8 @@
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.url=jdbc:mysql://106.15.180.82:3306/good?useUnicode=true&characterEncoding=utf8
-#jdbc.username=root
-#jdbc.password=MyNewPass4!
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/good?useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://106.15.180.82:3306/good?useUnicode=true&characterEncoding=utf8
 jdbc.username=root
-jdbc.password=123
+jdbc.password=MyNewPass4!
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://localhost:3306/good?useUnicode=true&characterEncoding=utf8
+#jdbc.username=root
+#jdbc.password=123
